--- a/index.html
+++ b/index.html
@@ -67,19 +67,35 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="https://github.com/nonsobeam/India-Covid-19-situation-and-analysis">India Covid-19 cleaning and Analysis with Google Sheets<br />
+										<h2><a href="https://public.tableau.com/app/profile/uzornne.thaddeus">India Covid-19 cleaning and Analysis with Google Sheets<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/nonsobeam/India-Covid-19-situation-and-analysis" class="image fit"><img src="images/200324021755-07-coronavirus-india-0324-super-tease.jpg" alt="" /></a>
-									<p>For this Project I made a thorough analysis of the covid-19 pandemic on Indian States.
-										All analysis and Visualisations were made using Google sheets.
+									<a href="https://public.tableau.com/app/profile/uzornne.thaddeus" class="image fit"><img src="images/Tableau.png" alt="" /></a>
+									<p>Tableau projects and Visualisations are on my Tableau Public profile
 									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/nonsobeam/India-Covid-19-situation-and-analysis" class="button">Veiw Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/uzornne.thaddeus" class="button">Veiw Project</a></li>
 									</ul>
 								</article>
 								<article>
 								
+						<!-- Posts -->
+						<section class="posts Featured">
+							<article>
+								<header>
+									<span class="date"></span>
+									<h2><a href="https://github.com/nonsobeam/India-Covid-19-situation-and-analysis">India Covid-19 cleaning and Analysis with Google Sheets<br />
+									</a></h2>
+								</header>
+								<a href="https://github.com/nonsobeam/India-Covid-19-situation-and-analysis" class="image fit"><img src="images/200324021755-07-coronavirus-india-0324-super-tease.jpg" alt="" /></a>
+								<p>For this Project I made a thorough analysis of the covid-19 pandemic on Indian States.
+									All analysis and Visualisations were made using Google sheets.
+								</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/nonsobeam/India-Covid-19-situation-and-analysis" class="button">Veiw Project</a></li>
+								</ul>
+							</article>
+							<article>			
 
 				<!-- Copyright -->
 					<div id="copyright">
