--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="https://public.tableau.com/app/profile/uzornne.thaddeus">India Covid-19 cleaning and Analysis with Google Sheets<br />
+										<h2><a href="https://public.tableau.com/app/profile/uzornne.thaddeus">Tableau Projects<br />
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/uzornne.thaddeus" class="image fit"><img src="images/Tableau.png" alt="" /></a>
